appointments & quotes separation

--- a/src/app/components/quotes/quotes.component.html
+++ b/src/app/components/quotes/quotes.component.html
@@ -4,12 +4,8 @@
         <div class="az-content-left az-content-left-contacts">
           <div class="az-content-breadcrumb lh-1 mg-b-10">
           </div>
-          <h2 class="az-content-title tx-24 mg-b-30">My Orders</h2>
-          <nav class="nav az-nav-line az-nav-line-chat">
-            <a href="#" (click)="appointments()"  ata-toggle="tab" class="nav-link active">Appointments</a>
-            <a  href="#" (click)="quotes()"   data-toggle="tab" class="nav-link" >Quotes</a>
-          </nav>
-
+          <h2 class="az-content-title tx-24 mg-b-30">My quotes</h2>
+    
           <div id="azContactList" class="az-contacts-list" [hidden]="appointment" >
             <div class="az-contact-label">{{first}}</div>
             <div class="az-contact-item " id="az-contact-item" *ngFor="let order of orders; index as i" (click)="setId(order,i,this._uw.tamano)"  [hidden]="order.orderType=='appointment'" > 
@@ -23,36 +19,17 @@
             </div>
           </div>
 
-           <div id="azContactList" class="az-contacts-list" [hidden]="quote"  >
-            <div class="az-contact-label">{{first}}</div>
-            <div class="az-contact-item " id="az-contact-item" *ngFor="let order of orders; index as i" (click)="setId(order,i,this._uw.tamano)" [hidden]="order.orderType!='appointment'"> 
-                  <div class="az-img-user online"><img src="assets/assetsmobile/img/service.png" alt=""></div>
-              <div class="az-contact-body">
-                <h6>{{order.quoteId  }}</h6>
-                <h6>{{order.serviceType  | slice:0:20 }}</h6>
-                <span>{{order.houseSize}}</span>
-              </div>
-               <a href="#" class="az-contact-star active"><i class="typcn typcn-star"></i></a>
-            </div>
-          </div>
         </div>
 
-    <!--     <div class="az-content-body az-content-body-contacts" [hidden]="itemSelected" >
-            <div style="padding: 30%;">
-          <p>
-            {{message}}
-          </p>
-            </div>
-        </div>
- -->
-        <div class="az-content-body az-content-body-contacts" [hidden]="!itemSelected || !quote" >
+  
+        <div class="az-content-body az-content-body-contacts" [hidden]="!itemSelected ">
           <div class="az-contact-info-header">
             <div class="media">
               <div class="az-img-user">
                 <img src="assets/assetsmobile/img/service.png" alt="">
                </div>
               <div class="media-body">
-                <h4>{{_uw.orderSelected.quoteId}}</h4>
+                <h4># {{_uw.orderSelected.quoteId}}</h4>
                 <p>{{_uw.orderSelected.serviceType  }} </p>
                 <p>{{_uw.orderSelected.subService  }}</p>
                 <nav class="nav">
@@ -143,86 +120,7 @@
           </div>
         </div>
 
-         <div class="az-content-body az-content-body-contacts" [hidden]="!itemSelected || !appointment" >
-          <div class="az-contact-info-header">
-            <div class="media">
-              <div class="az-img-user">
-                <img src="assets/assetsmobile/img/service.png" alt="">
-               </div>
-              <div class="media-body">
-                <h4>{{_uw.orderSelected.quoteId}}</h4>
-                <p>{{_uw.orderSelected.serviceType  }} </p>
-                <p>{{_uw.orderSelected.houseSize  }}</p>
-                <nav class="nav">
-                 
-                
-               
-               </nav>
-              </div>
-            </div>
-
-
-          </div>
-          <div class="az-contact-info-body">
-            <div class="media-list">
-              <div class="media">
-                <div class="media-icon"><i class="fas fa-user"></i></div>
-                <div class="media-body">
-                  <div>
-                    <label>Client</label>
-                    <span class="tx-medium">{{_uw.orderSelected.name}}</span>
-                  </div>
-                  <div>
-                
-                  </div>
-                </div>
-              </div>
-              <div class="media">
-                <div class="media-icon"><i class="fas fa-mobile-alt"></i></div>
-                <div class="media-body">
-                  <div>
-                    <label>Phone</label>
-                    <span class="tx-medium">{{_uw.orderSelected.phone}}</span>
-                  </div>
-                  <div>
-                
-                  </div>
-                </div>
-              </div>
-              <div class="media">
-                <div class="media-icon align-self-start"><i class="far fa-envelope"></i></div>
-                <div class="media-body">
-                  <div>
-                    <label>Email</label>
-                    <span class="tx-medium">{{_uw.orderSelected.email}}</span>
-                  </div>
-                  <div>
-                
-                  </div>
-                </div>
-              </div>
-              <div class="media">
-                <div class="media-icon"><i class="far fa-map"></i></div>
-                <div class="media-body">
-                  <div>
-                    <label>Address</label>
-                    <span class="tx-medium">{{_uw.orderSelected.address}}</span>
-                  </div>
-                </div>
-              </div>
-              <div class="media">
-                <div class="media-icon"><i class="far fa-money-bill"></i></div>
-                <div class="media-body">
-                  <div>
-                    <label>Amount</label>
-                    <a href="#" class="tx-13">CAD: {{_uw.orderSelected.amount  |  number:'1.0-2' }}</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
+      
       </div>
     </div>
 
