--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -2,143 +2,58 @@
     <div class="az-header">
       <div class="container">
         <div class="az-header-left">
-          <a href="index.html" class="az-logo"><span></span> MySite</a>
+          <a routerLink="" class="az-logo"><span></span> MySite</a>
           <a href="#" id="azMenuShow" class="az-header-menu-icon d-lg-none"><span></span></a>
           <a href="#" id="azContentBodyHide" class="az-header-arrow d-md-none"><i class="fa fa-arrow-left"></i></a>
         </div><!-- az-header-left -->
         <div class="az-header-menu">
           <div class="az-header-menu-header">
-            <a href="index.html" class="az-logo"><span></span> MySite</a>
+            <a routerLink="" class="az-logo"><span></span> MySite</a>
             <a href="#" class="close">&times;</a>
           </div><!-- az-header-menu-header -->
-          <ul class="nav">
-   <!--         <li class="nav-item">
-              <a href="#" class="nav-link with-sub"><i class="typcn typcn-chart-area-outline"></i> Dashboard</a>
-              <div class="az-menu-sub">
-                <nav class="nav">
-                  <a href="dashboard-one.html" class="nav-link">Web Analytics</a>
-                  <a href="dashboard-two.html" class="nav-link">Sales Monitoring</a>
-                  <a href="dashboard-three.html" class="nav-link">Ad Campaign</a>
-                  <a href="dashboard-four.html" class="nav-link">Event Management</a>
-                  <a href="dashboard-five.html" class="nav-link">Helpdesk Management</a>
-                  <a href="dashboard-six.html" class="nav-link">Finance Monitoring</a>
-                  <a href="dashboard-seven.html" class="nav-link">Cryptocurrency</a>
-                  <a href="dashboard-eight.html" class="nav-link">Executive / SaaS</a>
-                  <a href="dashboard-nine.html" class="nav-link">Campaign Monitoring</a>
-                  <a href="dashboard-ten.html" class="nav-link">Product Management</a>
-                </nav>
-              </div>
-            </li> -->
-            <li class="nav-item active show">
-              <a href="#" class="nav-link "><i class="typcn typcn-bookmark"></i> Quotes</a>
-             <!--  <nav class="az-menu-sub">
-                <a href="app-mail.html" class="nav-link">Mailbox</a>
-                <a href="app-chat.html" class="nav-link">Chat</a>
-                <a href="app-calendar.html" class="nav-link">Calendar</a>
-                <a href="app-contacts.html" class="nav-link active">Contacts</a>
-              </nav> -->
+
+<ul class="nav"  [hidden]="!this._uw.account ">
+            <li class="nav-item   active show"   >
+              <a routerLink="account " class="nav-link "><i class="typcn typcn-user-outline"></i> My Account</a>
             </li>
-          <!--   <li class="nav-item   ">
-              <a routerLink="calendar" class="nav-link "><i class="typcn typcn-calendar"></i> Calendar</a>
-           
-           
-            </li> -->
-          <!--   <li class="nav-item">
-              <a href="#" class="nav-link with-sub"><i class="typcn typcn-cog-outline"></i> Settings</a>
-              <nav class="az-menu-sub">
-                <a href="page-profile.html" class="nav-link">Profile</a>
-                <a href="page-invoice.html" class="nav-link">Invoice</a>
-                <a href="page-signin.html" class="nav-link">Sign In</a>
-                <a href="page-signup.html" class="nav-link">Sign Up</a>
-                <a href="page-404.html" class="nav-link">Page 404</a>
-              </nav>
-            </li> -->
-     <!--        <li class="nav-item">
-              <a href="#" class="nav-link with-sub"><i class="typcn typcn-book"></i> Components</a>
-              <div class="az-menu-sub az-menu-sub-mega">
-                <div class="container">
-                  <div>
-                    <nav class="nav">
-                      <span>UI Elements</span>
-                      <a href="elem-accordion.html" class="nav-link">Accordion</a>
-                      <a href="elem-alerts.html" class="nav-link">Alerts</a>
-                      <a href="elem-avatar.html" class="nav-link">Avatar</a>
-                      <a href="elem-badge.html" class="nav-link">Badge</a>
-                      <a href="elem-breadcrumbs.html" class="nav-link">Breadcrumbs</a>
-                      <a href="elem-buttons.html" class="nav-link">Buttons</a>
-                      <a href="elem-cards.html" class="nav-link">Cards</a>
-                      <a href="elem-carousel.html" class="nav-link">Carousel</a>
-                    </nav>
-                    <nav class="nav">
-                      <a href="elem-collapse.html" class="nav-link">Collapse</a>
-                      <a href="elem-dropdown.html" class="nav-link">Dropdown</a>
-                      <a href="elem-icons.html" class="nav-link">Icons</a>
-                      <a href="elem-images.html" class="nav-link">Images</a>
-                      <a href="elem-list-group.html" class="nav-link">List Group</a>
-                      <a href="elem-media-object.html" class="nav-link">Media Object</a>
-                      <a href="elem-modals.html" class="nav-link">Modals</a>
-                      <a href="elem-navigation.html" class="nav-link">Navigation</a>
-                    </nav>
-                    <nav class="nav">
-                      <a href="elem-pagination.html" class="nav-link">Pagination</a>
-                      <a href="elem-popover.html" class="nav-link">Popover</a>
-                      <a href="elem-progress.html" class="nav-link">Progress</a>
-                      <a href="elem-spinners.html" class="nav-link">Spinners</a>
-                      <a href="elem-toast.html" class="nav-link">Toast</a>
-                      <a href="elem-tooltip.html" class="nav-link">Tooltip</a>
-                    </nav>
-                  </div>
-                  <div>
-                    <nav class="nav">
-                      <span>Forms</span>
-                      <a href="form-elements.html" class="nav-link">Form Elements</a>
-                      <a href="form-layouts.html" class="nav-link">Form Layouts</a>
-                      <a href="form-validation.html" class="nav-link">Form Validation</a>
-                      <a href="form-wizards.html" class="nav-link">Form Wizards</a>
-                      <a href="form-editor.html" class="nav-link">WYSIWYG Editor</a>
-                    </nav>
-                  </div>
-                  <div>
-                    <nav class="nav">
-                      <span>Charts</span>
-                      <a href="chart-morris.html" class="nav-link">Morris Charts</a>
-                      <a href="chart-flot.html" class="nav-link">Flot Charts</a>
-                      <a href="chart-chartjs.html" class="nav-link">ChartJS</a>
-                      <a href="chart-sparkline.html" class="nav-link">Sparkline</a>
-                      <a href="chart-peity.html" class="nav-link">Peity</a>
-                    </nav>
-                  </div>
-                  <div>
-                    <nav class="nav">
-                      <span>Maps</span>
-                      <a href="map-google.html" class="nav-link">Google Maps</a>
-                      <a href="map-leaflet.html" class="nav-link">Leaflet</a>
-                      <a href="map-vector.html" class="nav-link">Vector Maps</a>
-                      <span>Tables</span>
-                      <a href="table-basic.html" class="nav-link">Basic Tables</a>
-                      <a href="table-data.html" class="nav-link">Data Tables</a>
-                    </nav>
-                  </div>
-                </div>
-              </div>
-            </li> -->
-         <!--    <li class="nav-item">
-              <a href="#" class="nav-link with-sub"><i class="typcn typcn-tabs-outline"></i> Utilities</a>
-              <nav class="az-menu-sub">
-                <a href="util-background.html" class="nav-link">Background</a>
-                <a href="util-border.html" class="nav-link">Border</a>
-                <a href="util-display.html" class="nav-link">Display</a>
-                <a href="util-flex.html" class="nav-link">Flex</a>
-                <a href="util-height.html" class="nav-link">Height</a>
-                <a href="util-margin.html" class="nav-link">Margin</a>
-                <a href="util-padding.html" class="nav-link">Padding</a>
-                <a href="util-position.html" class="nav-link">Position</a>
-                <a href="util-typography.html" class="nav-link">Typography</a>
-                <a href="util-width.html" class="nav-link">Width</a>
-                <a href="util-extras.html" class="nav-link">Extras</a>
-              </nav>
-            </li> -->
+            <li class="nav-item"  >
+              <a routerLink="appointments" class="nav-link "><i class="typcn typcn-calendar"></i> Appointments</a>
+            
+            </li>
+            <li class="nav-item  "   >
+              <a routerLink="quotes" class="nav-link "><i class="typcn typcn-bookmark"></i> Quotes</a>
+            </li>
           </ul>
+
+          
+
+          <ul class="nav"  [hidden]="!router.url.includes('/appointments')  ">
+            <li class="nav-item  "   >
+              <a routerLink="account" class="nav-link "><i class="typcn typcn-user-outline"></i> My Account</a>
+            </li>
+            <li class="nav-item active show"  >
+              <a routerLink="appointments" class="nav-link "><i class="typcn typcn-calendar"></i> Appointments</a>
+            
+            </li>
+            <li class="nav-item  "   >
+              <a routerLink="quotes" class="nav-link "><i class="typcn typcn-bookmark"></i> Quotes</a>
+            </li>
+          </ul>
+
+          <ul class="nav"  [hidden]="!router.url.includes('/quotes') ">
+              <li class="nav-item  "   >
+              <a routerLink="account" class="nav-link "><i class="typcn typcn-user-outline"></i> My Account</a>
+            </li>
+            <li class="nav-item "  >
+              <a routerLink="appointments" class="nav-link "><i class="typcn typcn-calendar"></i> Appointments</a>
+            
+            </li>
+            <li class="nav-item active show "   >
+              <a routerLink="quotes" class="nav-link "><i class="typcn typcn-bookmark"></i> Quotes</a>
+            </li>
+          </ul>
+
+
         </div><!-- az-header-menu -->
         <div class="az-header-right">
          <!--  <a href="#" class="az-header-search-link"><i class="fas fa-search"></i></a> -->
@@ -176,7 +91,7 @@ That's all right</a></div>
             <!--   <a href="#" class="dropdown-item"><i class="typcn typcn-user-outline"></i> My Profile</a>
               <a href="#" class="dropdown-item"><i class="typcn typcn-edit"></i> Edit Profile</a>
               <a href="#" class="dropdown-item"><i class="typcn typcn-time"></i> Activity Logs</a> -->
-              <a href="#" class="dropdown-item"><i class="typcn typcn-cog-outline"></i> Account Settings</a>
+              <a  routerLink="account"class="dropdown-item"  style="cursor: pointer;"><i class="typcn typcn-cog-outline"></i> Account Settings</a>
               <a href="page-signin.html" class="dropdown-item"><i class="typcn typcn-power-outline"></i> Sign Out</a>
             </div><!-- dropdown-menu -->
           </div>
