appointments & quotes separation

--- a/src/app/components/quotes/quotes.component.html
+++ b/src/app/components/quotes/quotes.component.html
@@ -4,7 +4,7 @@
         <div class="az-content-left az-content-left-contacts">
           <div class="az-content-breadcrumb lh-1 mg-b-10">
           </div>
-          <h2 class="az-content-title tx-24 mg-b-30">My quotes</h2>
+          <h2 class="az-content-title tx-24 mg-b-30">My Quotes</h2>
     
           <div id="azContactList" class="az-contacts-list" [hidden]="appointment" >
             <div class="az-contact-label">{{first}}</div>
