--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -26,33 +26,20 @@
             <label class="az-content-label tx-13 mg-b-20">Websites &amp; Social Channel</label>
             <div class="az-profile-social-list">
               <div class="media">
-                <div class="media-icon"><i class="icon ion-logo-github"></i></div>
+                <div class="media-icon"><i class="icon ion-logo-facebook"></i></div>
                 <div class="media-body">
-                  <span>Github</span>
-                  <a href="#">github.com/sophia.white</a>
+                  <span>Facebook</span>
+                  <a href="https://www.facebook.com/Penguins-Cleaning-Service-106602107768271">https://www.facebook.com/Penguins-Cleaning-Service-106602107768271</a>
                 </div>
               </div><!-- media -->
               <div class="media">
-                <div class="media-icon"><i class="icon ion-logo-twitter"></i></div>
+                <div class="media-icon"><i class="icon ion-logo-instagram"></i></div>
                 <div class="media-body">
-                  <span>Twitter</span>
-                  <a href="#">twitter.com/sophia.me</a>
+                  <span>instagram</span>
+                  <a href="https://www.instagram.com/penguinscleaningservice/">@penguinscleaningservice</a>
                 </div>
               </div><!-- media -->
-              <div class="media">
-                <div class="media-icon"><i class="icon ion-logo-linkedin"></i></div>
-                <div class="media-body">
-                  <span>Linkedin</span>
-                  <a href="#">linkedin.com/in/sophiaw</a>
-                </div>
-              </div><!-- media -->
-              <div class="media">
-                <div class="media-icon"><i class="icon ion-md-link"></i></div>
-                <div class="media-body">
-                  <span>My Portfolio</span>
-                  <a href="#">bootstrapdash.com/</a>
-                </div>
-              </div><!-- media -->
+           <!-- media -->
             </div><!-- az-profile-social-list -->
 
           </div><!-- az-profile-overview -->
