--- a/src/app/components/appointments/appointments.component.html
+++ b/src/app/components/appointments/appointments.component.html
@@ -70,7 +70,7 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon align-self-start"><i class="far fa-envelope"></i></div>
+                <div class="media-icon align-self-start"><i class="fas fa-envelope"></i></div>
                 <div class="media-body">
                   <div>
                     <label>Email</label>
@@ -82,7 +82,7 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon"><i class="far fa-map"></i></div>
+                <div class="media-icon"><i class="fas fa-map"></i></div>
                 <div class="media-body">
                   <div>
                     <label>Address</label>
@@ -91,7 +91,7 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon"><i class="far fa-money-bill"></i></div>
+                <div class="media-icon"><i class="fas fa-money-bill"></i></div>
                 <div class="media-body">
                   <div>
                     <label>Amount</label>
