--- a/src/app/components/quotes/quotes.component.html
+++ b/src/app/components/quotes/quotes.component.html
@@ -87,7 +87,7 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon align-self-start"><i class="far fa-envelope"></i></div>
+                <div class="media-icon align-self-start"><i class="fas fa-envelope"></i></div>
                 <div class="media-body">
                   <div>
                     <label>Email</label>
@@ -99,7 +99,7 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon"><i class="far fa-map"></i></div>
+                <div class="media-icon"><i class="fas fa-map"></i></div>
                 <div class="media-body">
                   <div>
                     <label>Address</label>
@@ -108,7 +108,7 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon"><i class="far fa-money-bill"></i></div>
+                <div class="media-icon"><i class="fas fa-money-bill"></i></div>
                 <div class="media-body">
                   <div>
                     <label>Amount</label>
