--- a/src/app/components/quotes/quotes.component.html
+++ b/src/app/components/quotes/quotes.component.html
@@ -126,7 +126,7 @@
 
     <div class="az-footer ht-40">
       <div class="container ht-100p pd-t-0-f">
-        <span>&copy; 2020 Buckapi.com</span>
+        <span>&copy; 2021 Buckapi.com JM</span>
       </div><!-- container -->
     </div><!-- az-footer -->
     <script>
