--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -228,7 +228,7 @@
 
     <div class="az-footer ht-40">
       <div class="container ht-100p pd-t-0-f">
-        <span>&copy; 2021 Buckapi.com JM</span>
+        <span>&copy; 2021 Buckapi.com v1.0</span>
       </div><!-- container -->
     </div><!-- az-footer -->
     <script>
