--- a/src/app/components/appointments/appointments.component.html
+++ b/src/app/components/appointments/appointments.component.html
@@ -58,7 +58,7 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon"><i class="fas fa-mobile-alt"></i></div>
+                <div class="media-icon"><ion-icon name="layers-outline"></ion-icon></div>
                 <div class="media-body">
                   <div>
                     <label>Phone</label>
@@ -108,7 +108,7 @@
 
     <div class="az-footer ht-40">
       <div class="container ht-100p pd-t-0-f">
-        <span>&copy; 2021 Buckapi.com v1.2</span>
+        <span>&copy; 2021 Buckapi.com v1.3</span>
       </div><!-- container -->
     </div><!-- az-footer -->
     <script>
