--- a/src/app/components/appointments/appointments.component.html
+++ b/src/app/components/appointments/appointments.component.html
@@ -58,7 +58,9 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon"><ion-icon name="layers-outline"></ion-icon></div>
+                <div class="media-icon">
+                  <ion-icon name="person-outline"></ion-icon>
+                </div>
                 <div class="media-body">
                   <div>
                     <label>Phone</label>
