--- a/src/app/components/appointments/appointments.component.html
+++ b/src/app/components/appointments/appointments.component.html
@@ -59,7 +59,7 @@
               </div>
               <div class="media">
                 <div class="media-icon">
-                  <ion-icon name="person-outline"></ion-icon>
+                   <ion-icon name="ios-person"></ion-icon>
                 </div>
                 <div class="media-body">
                   <div>
