--- a/src/app/components/appointments/appointments.component.html
+++ b/src/app/components/appointments/appointments.component.html
@@ -46,7 +46,7 @@
           <div class="az-contact-info-body">
             <div class="media-list">
               <div class="media">
-                <div class="media-icon"><i class="fas fa-user"></i></div>
+                <div class="media-icon"><ion-icon name="ios-person"></ion-icon></div>
                 <div class="media-body">
                   <div>
                     <label>Client</label>
@@ -59,7 +59,7 @@
               </div>
               <div class="media">
                 <div class="media-icon">
-                   <ion-icon name="ios-person"></ion-icon>
+                    <ion-icon name="ios-phone-landscape"></ion-icon>  
                 </div>
                 <div class="media-body">
                   <div>
@@ -72,7 +72,10 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon align-self-start"><i class="fas fa-envelope"></i></div>
+                <div class="media-icon align-self-start">
+                  <!-- <i class="fas fa-envelope"></i> -->
+                    <ion-icon name="ios-mail-unread"></ion-icon>  
+                </div>
                 <div class="media-body">
                   <div>
                     <label>Email</label>
@@ -84,7 +87,11 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon"><i class="fas fa-map"></i></div>
+                <div class="media-icon">
+                  <!-- <i class="fas fa-map"></i> -->
+
+                    <ion-icon name="ios-locate.svg"></ion-icon>  
+                </div>
                 <div class="media-body">
                   <div>
                     <label>Address</label>
