--- a/src/app/components/appointments/appointments.component.html
+++ b/src/app/components/appointments/appointments.component.html
@@ -90,7 +90,7 @@
                 <div class="media-icon">
                   <!-- <i class="fas fa-map"></i> -->
 
-                    <ion-icon name="ios-locate.svg"></ion-icon>  
+                    <ion-icon name="ios-locate"></ion-icon>  
                 </div>
                 <div class="media-body">
                   <div>
