--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -26,14 +26,20 @@
             <label class="az-content-label tx-13 mg-b-20">Websites &amp; Social Channel</label>
             <div class="az-profile-social-list">
               <div class="media">
-                <div class="media-icon"><i class="icon ion-logo-facebook"></i></div>
+                <div class="media-icon">
+                  <!-- <i class="icon ion-logo-facebook"></i> -->
+       <ion-icon name="logo-facebook"></ion-icon>  
+                </div>
                 <div class="media-body">
                   <span>Facebook</span>
                   <a href="https://www.facebook.com/Penguins-Cleaning-Service-106602107768271">@Penguins-Cleaning-Service-106602107768271</a>
                 </div>
               </div><!-- media -->
               <div class="media">
-                <div class="media-icon"><i class="icon ion-logo-instagram"></i></div>
+                <div class="media-icon">
+       <ion-icon name="logo-instagram"></ion-icon>  
+                  <!-- <i class="icon ion-logo-instagram"></i> -->
+                </div>
                 <div class="media-body">
                   <span>instagram</span>
                   <a href="https://www.instagram.com/penguinscleaningservice/">@penguinscleaningservice</a>
