--- a/src/app/components/quotes/quotes.component.html
+++ b/src/app/components/quotes/quotes.component.html
@@ -63,8 +63,8 @@
           <div class="az-contact-info-body">
             <div class="media-list">
               <div class="media">
-                <div class="media-icon"><i class="fas fa-user"></i></div>
-                <div class="media-body">
+                   <div class="media-icon"><ion-icon name="ios-person"></ion-icon></div>
+                   <div class="media-body">
                   <div>
                     <label>Client</label>
                     <span class="tx-medium">{{_uw.orderSelected.name}}</span>
@@ -75,8 +75,9 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon"><i class="fas fa-mobile-alt"></i></div>
-                <div class="media-body">
+               <div class="media-icon">
+                    <ion-icon name="ios-phone-landscape"></ion-icon>  
+                </div><div class="media-body">
                   <div>
                     <label>Phone</label>
                     <span class="tx-medium">{{_uw.orderSelected.phone}}</span>
@@ -87,7 +88,10 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon align-self-start"><i class="fas fa-envelope"></i></div>
+                 <div class="media-icon align-self-start">
+                  <!-- <i class="fas fa-envelope"></i> -->
+                    <ion-icon name="ios-mail-unread"></ion-icon>  
+                </div>
                 <div class="media-body">
                   <div>
                     <label>Email</label>
@@ -99,7 +103,12 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon"><i class="fas fa-map"></i></div>
+                <div class="media-icon">
+                  <!-- <i class="fas fa-map"></i> -->
+
+                    <ion-icon name="ios-locate"></ion-icon>  
+             
+                </div>
                 <div class="media-body">
                   <div>
                     <label>Address</label>
@@ -107,8 +116,11 @@
                   </div>
                 </div>
               </div>
-              <div class="media">
-                <div class="media-icon"><i class="fas fa-money-bill"></i></div>
+              <div class="media"> 
+                <div class="media-icon">
+                    <ion-icon name="ios-cash"></ion-icon>  
+                    <!-- <i class="fas fa-money-bill"></i> -->
+                </div>
                 <div class="media-body">
                   <div>
                     <label>Amount</label>
