--- a/src/app/components/appointments/appointments.component.html
+++ b/src/app/components/appointments/appointments.component.html
@@ -91,6 +91,7 @@
                   <!-- <i class="fas fa-map"></i> -->
 
                     <ion-icon name="ios-locate"></ion-icon>  
+             
                 </div>
                 <div class="media-body">
                   <div>
@@ -100,7 +101,10 @@
                 </div>
               </div>
               <div class="media">
-                <div class="media-icon"><i class="fas fa-money-bill"></i></div>
+                <div class="media-icon">
+                    <ion-icon name="ios-cash"></ion-icon>  
+                    <!-- <i class="fas fa-money-bill"></i> -->
+                </div>
                 <div class="media-body">
                   <div>
                     <label>Amount</label>
